RASS-362 integrate appearance outcome page with backend

--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -62,7 +62,7 @@
                             text: "Overall case outcome"
                         },
                             value: {
-                            text: courtAppearance.overallCaseOutcome
+                            text: courtAppearance.appearanceOutcomeUuid
                         },
                             actions: {
                             items: [
