Refactored code for conviction date

--- a/server/views/pages/offence/edit-offence.njk
+++ b/server/views/pages/offence/edit-offence.njk
@@ -62,7 +62,7 @@
                     key: {
                         text: "Conviction date"
                     }, value: {
-                        text: (offence.sentence.convictionDate | formatDate if offence.sentence and offence.sentence.convictionDate else 'N/A')
+                        text: (offence.sentence.convictionDate | formatDate if offence.sentence.convictionDate else 'N/A')
                     },
                     actions: {
                         items: [{
