--- a/server/views/pages/courtAppearance/overall-case-outcome.njk
+++ b/server/views/pages/courtAppearance/overall-case-outcome.njk
@@ -1,4 +1,4 @@
-{% extends "../../partials/prisonerBannerLayout.njk" %}
+{% extends "../../partials/prisonerBannerBackLayout.njk" %}
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
@@ -18,7 +18,7 @@
                     items: []
     } %}
 
-{% for caseOutcome in warrantTypeOutcomes %}
+{% for caseOutcome in mainOutcomes %}
     {% set caseOutcomeValue = caseOutcome.outcomeUuid + '|' + caseOutcome.relatedChargeOutcomeUuid %}
     {%- set caseOutcomeRow = {
         value: caseOutcomeValue,
@@ -28,18 +28,19 @@
     {{ radiosData.items.push(caseOutcomeRow) }}
 {% endfor %}
 
-{{ radiosData.items.push({ divider: "or"}) }}
+{% if subListOutcomes.length %}
+    {{ radiosData.items.push({ divider: "or"}) }}
 
-{% for caseOutcome in otherOutcomes %}
- {% set caseOutcomeValue = caseOutcome.outcomeUuid + '|' + caseOutcome.relatedChargeOutcomeUuid %}
-{%- set caseOutcomeRow = {
-        value: caseOutcomeValue,
-        text: caseOutcome.outcomeName,
-        checked: caseOutcomeValue === overallCaseOutcomeForm.overallCaseOutcome
-    } -%}
-    {{ radiosData.items.push(caseOutcomeRow) }}
-{% endfor %}
-
+    {% for caseOutcome in subListOutcomes %}
+         {% set caseOutcomeValue = caseOutcome.outcomeUuid + '|' + caseOutcome.relatedChargeOutcomeUuid %}
+         {%- set caseOutcomeRow = {
+                value: caseOutcomeValue,
+                text: caseOutcome.outcomeName,
+                checked: caseOutcomeValue === overallCaseOutcomeForm.overallCaseOutcome
+            } -%}
+            {{ radiosData.items.push(caseOutcomeRow) }}
+    {% endfor %}
+{% endif %}
 
 {% block content %}
     {{ super() }}
