RASS-367 lookup appearance outcome by uuid

--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -53,16 +53,13 @@
                                 }
                             ]
                         }
-                        }
-                    ] %}
-
-{% if courtAppearance.warrantType === 'REMAND' %}
-    {% set checkAnswersRows = (checkAnswersRows.concat([{
+                        },
+                        {
                             key: {
                             text: "Overall case outcome"
                         },
                             value: {
-                            text: courtAppearance.appearanceOutcomeUuid
+                            text: overallCaseOutcome
                         },
                             actions: {
                             items: [
@@ -90,10 +87,8 @@
                                 }
                             ]
                         }
-                        }]))%}
-{% endif %}
-
-{% set checkAnswersRows = (checkAnswersRows.push({
+                        },
+                        {
                             key: {
                             text: "Tagged bail"
                         },
@@ -109,7 +104,8 @@
                                 }
                             ]
                         }
-                        }), checkAnswersRows)%}
+                        }
+                    ] %}
 
 {% if courtAppearance.overallSentenceLength %}
 
