--- a/server/views/pages/courtAppearance/details.njk
+++ b/server/views/pages/courtAppearance/details.njk
@@ -86,7 +86,7 @@
                             text: "Overall case outcome"
                         },
                             value: {
-                            text: appearance.appearanceOutcomeUuid
+                            text: overallCaseOutcome
                         },
                             actions: {
                             items: [
