--- a/server/views/pages/offence/delete-offence.njk
+++ b/server/views/pages/offence/delete-offence.njk
@@ -17,7 +17,7 @@
             offenceName: offenceMap[offence.offenceCode],
             offenceStartDate: offence.offenceStartDate | formatDate,
             offenceEndDate: offence.offenceEndDate | formatDate,
-            outcome: offence.outcome,
+            outcome: outcome | outcomeValueOrLegacy(offence.legacyData),
             countNumber: offence.sentence.countNumber,
             convictionDate: offence.sentence.convictionDate | formatDate,
             terrorRelated: offence.terrorRelated,
