--- a/server/views/pages/offence/edit-offence.njk
+++ b/server/views/pages/offence/edit-offence.njk
@@ -66,7 +66,7 @@
                     },
                     actions: {
                         items: [{
-                            href: "/person/" +  nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offenceReference + "/conviction-date",
+                            href: "/person/" +  nomsId + "/" + addOrEditCourtCase + "/" + courtCaseReference  + "/" + addOrEditCourtAppearance + "/" + appearanceReference + "/offences/" + offenceReference + "/conviction-date?submitToEditOffence=true",
                             text: "Edit",
                             visuallyHiddenText: "conviction date"
                         }]
@@ -120,7 +120,7 @@
                     key: {
                         text: "Outcome"
                     }, value: {
-                        text: offence.outcome
+                        text: outcome | outcomeValueOrLegacy(offence.legacyData)
                     },
                     actions: {
                         items: [{
