--- a/server/views/pages/offence/offence-outcome.njk
+++ b/server/views/pages/offence/offence-outcome.njk
@@ -4,12 +4,18 @@
 
 {% set pageTitle = applicationName + " - Add a offence outcome" %}
 
+{% set fieldSetHtml %}
+    <h1 class="govuk-fieldset__heading">{% if isAddCourtAppearance%}Select the outcome for this offence{%else%}Edit the outcome for this offence{%endif%}</h1>
+    {% if legacyCaseOutcome%}
+    <p class="govuk-body-l" data-qa="legendParagraph">{{ legacyCaseOutcome }}</p>
+    {% endif %}
+{% endset %}
+
 {% set radiosData = {
                     name: "offenceOutcome",
                     fieldset: {
                         legend: {
-                        text: "Select the outcome for this offence",
-                        isPageHeading: true,
+                        html: fieldSetHtml,
                         classes: "govuk-fieldset__legend--l"
                         }
                     },
