--- a/server/views/pages/start.njk
+++ b/server/views/pages/start.njk
@@ -182,7 +182,7 @@
                             actions: {
                                 items: [
                                 {
-                                    href: "/person/" + nomsId + "/edit-court-case/" + courtCaseDetails.courtCaseUuid +  "/add-court-appearance/" + courtCaseDetails.appearanceTotal + "/warrant-type",
+                                    href: "/person/" + nomsId + "/edit-court-case/" + courtCaseDetails.courtCaseUuid +  "/add-court-appearance/" + courtCaseDetails.appearanceTotal + "/new-journey",
                                     text: "Add an appearance",
                                     visuallyHiddenText: "Add an appearance"
                                 }]
@@ -205,7 +205,7 @@
             <div class="actions-list">
                 <ul class="govuk-list actions-list-list">
                     <span class="govuk-heading-m actions-list-header">Actions</span>
-                    <li><a href="/person/{{nomsId}}/add-court-case/{{newCourtCaseId}}/add-court-appearance/0/new-court-case">Add a new court case</a></li>
+                    <li><a href="/person/{{nomsId}}/add-court-case/{{newCourtCaseId}}/add-court-appearance/0/new-journey">Add a new court case</a></li>
                 </ul>
             </div>  
         </div>
