RASS-380 update outcome apples to all offences check answers logic

--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -76,7 +76,7 @@
                             text: "Outcome applies to all offences"
                         },
                             value: {
-                            text: "Yes" if courtAppearance.caseOutcomeAppliedAll else "No"
+                            text: "Yes" if courtAppearance.caseOutcomeAppliedAll == 'true' else "No"
                         },
                             actions: {
                             items: [
