RASS-393 remove tagged bail from remand journeys

--- a/server/views/pages/courtAppearance/check-answers.njk
+++ b/server/views/pages/courtAppearance/check-answers.njk
@@ -87,8 +87,11 @@
                                 }
                             ]
                         }
-                        },
-                        {
+                        }
+                    ] %}
+
+{% if courtAppearance.warrantType === 'SENTENCING' %}
+    {% set checkAnswersRows = (checkAnswersRows.push({
                             key: {
                             text: "Tagged bail"
                         },
@@ -104,8 +107,8 @@
                                 }
                             ]
                         }
-                        }
-                    ] %}
+                        }), checkAnswersRows)%}
+{% endif %}
 
 {% if courtAppearance.overallSentenceLength %}
 
