RASS-418 styling fixes

--- a/server/views/pages/courtAppearance/case-outcome-applied-all.njk
+++ b/server/views/pages/courtAppearance/case-outcome-applied-all.njk
@@ -4,8 +4,8 @@
 
 {% set pageTitle = applicationName + " - Add a court case Outcome applied to all" %}
 {% set fieldSetHtml %}
-    <h1 class="govuk-fieldset__heading">Does the outcome apply to all offences on the warrant?</h1>
-    <p class="govuk-body-l">{{ overallCaseOutcome }}</p>
+    <h1 class="govuk-fieldset__heading govuk-!-static-margin-bottom-3">Does the outcome apply to all offences on the warrant?</h1>
+    <p class="govuk-body-l govuk-!-static-margin-bottom-3">{{ overallCaseOutcome }}</p>
 {% endset %}
 {% block content %}
     {{ super() }}
