--- a/server/views/pages/courtAppearance/reference.njk
+++ b/server/views/pages/courtAppearance/reference.njk
@@ -23,6 +23,7 @@
                     id: "referenceNumber",
                     name: "referenceNumber",
                     errorMessage: errors | findError('referenceNumber'),
+                    classes: 'govuk-input-width-10',
                     value: courtCaseReferenceForm.referenceNumber
                 }) }}
 
