--- a/server/views/pages/courtAppearance/next-hearing-court-select.njk
+++ b/server/views/pages/courtAppearance/next-hearing-court-select.njk
@@ -4,8 +4,8 @@
 
 {% set pageTitle = applicationName + " - Add a court case Next court select" %}
 {% set fieldSetHtml %}
-    <h1 class="govuk-fieldset__heading">Is the next appearance at the same court?</h1>
-    <p class="govuk-body-l">{{ courtName }}</p>
+    <h1 class="govuk-fieldset__heading govuk-!-static-margin-bottom-3">Is the next appearance at the same court?</h1>
+    <p class="govuk-body-l govuk-!-static-margin-bottom-3">{{ courtName }}</p>
 {% endset %}
 {% block content %}
     {{ super() }}
