--- a/server/views/pages/offence/offence-outcome.njk
+++ b/server/views/pages/offence/offence-outcome.njk
@@ -5,9 +5,9 @@
 {% set pageTitle = applicationName + " - Add a offence outcome" %}
 
 {% set fieldSetHtml %}
-    <h1 class="govuk-fieldset__heading">{% if isAddCourtAppearance%}Select the outcome for this offence{%else%}Edit the outcome for this offence{%endif%}</h1>
+    <h1 class="govuk-fieldset__heading{% if legacyCaseOutcome %} govuk-!-static-margin-bottom-3{% endif %}">{% if isAddCourtAppearance%}Select the outcome for this offence{%else%}Edit the outcome for this offence{%endif%}</h1>
     {% if legacyCaseOutcome%}
-    <p class="govuk-body-l" data-qa="legendParagraph">{{ legacyCaseOutcome }}</p>
+    <p class="govuk-body-l govuk-!-static-margin-bottom-3" data-qa="legendParagraph">{{ legacyCaseOutcome }}</p>
     {% endif %}
 {% endset %}
 
