finish styling changes

--- a/server/views/pages/courtAppearance/next-hearing-date.njk
+++ b/server/views/pages/courtAppearance/next-hearing-date.njk
@@ -29,7 +29,7 @@
                         fieldset: {
                             legend: {
                                 text: "Next court date",
-                                classes: "govuk-label--s"
+                                classes: "govuk-label--s govuk-!-font-weight-bold"
                             }
 
                         },
