--- a/server/views/pages/courtAppearance/next-hearing-type.njk
+++ b/server/views/pages/courtAppearance/next-hearing-type.njk
@@ -14,7 +14,7 @@
                     name: "nextHearingType",
                     fieldset: {
                         legend: {
-                        text: "Select the next hearing type" if isAddCourtAppearance else "Edit the next hearing type",
+                        text: "How will they attend the hearing?" if isAddCourtAppearance else "Edit the next hearing type",
                         isPageHeading: true,
                         classes: "govuk-fieldset__legend--l"
                         }
