--- a/server/views/pages/offence/offence-code.njk
+++ b/server/views/pages/offence/offence-code.njk
@@ -20,6 +20,7 @@
                     id: "offence-code",
                     name: "offenceCode",
                     errorMessage: errors | findError('offenceCode'),
+                    classes: "govuk-input-width-10",
                     value: offenceCode
                 }) }}
 
