--- a/server/views/pages/offence/offence-date.njk
+++ b/server/views/pages/offence/offence-date.njk
@@ -25,7 +25,7 @@
                         fieldset: {
                             legend: {
                                 text: "Offence start date",
-                                classes: "govuk-label--s"
+                                classes: "govuk-label--s govuk-!-font-weight-bold"
                             }
                         },
                         items: [
@@ -54,7 +54,7 @@
                         fieldset: {
                             legend: {
                                 text: "Offence end date (optional)",
-                                classes: "govuk-label--s"
+                                classes: "govuk-label--s govuk-!-font-weight-bold"
                             }
                         },
                         hint: {
