RASS-418 styling fix for auto complete

--- a/assets/scss/local.scss
+++ b/assets/scss/local.scss
@@ -7,7 +7,7 @@
   border-bottom: none;
 }
 
-.autocomplete__input, .autocomplete__menu {
+.autocomplete__input, .autocomplete__menu, .autocomplete__hint {
   width:80% !important;
 }
 
