--- a/server/views/pages/error.njk
+++ b/server/views/pages/error.njk
@@ -4,9 +4,48 @@
 {% set mainClasses = "app-container govuk-body" %}
 
 {% block content %}
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-xl" data-qa="error-heading">
+        {% if errorKey === 'NOT_IN_CASELOAD' %}
+          The details for this person cannot be found
+        {% elif status === 404 and not errorKey %}
+          Page not found
+        {% else %}
+          {{ message }}
+        {% endif %}
+      </h1>
+    </div>
+  </div>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      {% if errorKey %}
+        {% if errorKey === 'NOT_IN_CASELOAD' %}
+          <p class="govuk-body">This could be because this person:</p>
+          <ul class="govuk-list govuk-list--bullet">
+            <li>is not in your case load</li>
+            <li>has no bookings assigned to them</li>
+            <li>has no active bookings</li>
+          </ul>
+          <p class="gouk-body">Check the details in NOMIS and then <a class="govuk-link" href="{{ url }}">try again</a>.</p>
+        {% elif status === 404 %}
+          <p class="govuk-body">If you typed the web address, check it is correct.</p>
 
-  <h1>{{ message }}</h1>
-  <h2>{{ status }}</h2>
+          <p class="govuk-body">If you pasted the web address, check you copied it correctly.</p>
+
+          <p class="govuk-body">Email <a href="mailto:calculatereleasedates@digital.justice.gov.uk?subject=Calculate release dates - Page not found">calculatereleasedates@digital.justice.gov.uk</a>
+            if you need support.</p>
+        {% endif %}
+
+      {% else %}
+        <h1>{{ message }}</h1>
+        <h2>{{ status }}</h2>
+      {% endif %}
+
+    </div>
+  </div>
+  {% if stack %}
   <pre>{{ stack }}</pre>
+  {% endif %}
 
 {% endblock %}
