--- a/server/views/pages/courtAppearance/overall-conviction-date-applied-all.njk
+++ b/server/views/pages/courtAppearance/overall-conviction-date-applied-all.njk
@@ -13,7 +13,8 @@
         <div class="govuk-grid-column-two-thirds">
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-overall-conviction-date-applied-all{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                {% include "../../partials/appearanceCaption.njk" %}
+                {% set isAddOffences = true %}
+                {% include "../../partials/offenceCaption.njk" %}
                 {{ govukRadios({
                     name: "overallConvictionDateAppliedAll",
                     fieldset: {
@@ -38,7 +39,7 @@
                 }) }}
 
                 {{ govukButton({
-                    text: "Continue"
+                    text: "Save and continue"
                 }) }}
             </form>
 
