--- a/server/views/pages/courtAppearance/overall-conviction-date.njk
+++ b/server/views/pages/courtAppearance/overall-conviction-date.njk
@@ -11,7 +11,8 @@
         <div class="govuk-grid-column-two-thirds">
             <form method="post" action="/person/{{ nomsId }}/{{ addOrEditCourtCase }}/{{ courtCaseReference }}/{{ addOrEditCourtAppearance }}/{{ appearanceReference }}/submit-overall-conviction-date{{ "?submitToCheckAnswers=true" if submitToCheckAnswers }}">
                 <input type="hidden" name="_csrf" value="{{ csrfToken }}">
-                {% include "../../partials/appearanceCaption.njk" %}
+                {% set isAddOffences = true %}
+                {% include "../../partials/offenceCaption.njk" %}
                 {{ govukDateInput({
                     id: "overall-conviction-date",
                     namePrefix: "overallConvictionDate",
@@ -49,7 +50,7 @@
                 }) }}
 
                 {{ govukButton({
-                    text: "Continue"
+                    text: "Save and continue"
                 }) }}
             </form>
 
