--- a/server/views/partials/offenceCaption.njk
+++ b/server/views/partials/offenceCaption.njk
@@ -4,8 +4,8 @@
         Appearance {{ courtAppearance.caseReferenceNumber }} at {{ courtAppearance.courtName }} on {{ courtAppearance.warrantDate | formatDate }}
     {% elif offence.sentence.countNumber and not isDeleteOffence %}
         Add sentence information for count {{ offence.sentence.countNumber }}
-    {% elif isAddCourtCase %}
-        Add a court case
+    {% elif isAddOffences %}
+        Add offences
     {% else %}
         Add an appearance to court case
     {% endif %}
